# econ

./: .gitignore  LICENSE  README.md  format_expr.sh  index.html  intersection.m  octave-workspace  regex.txt
client/consumer/: Cargo.toml
client/consumer/src/: lib.rs  structs.rs
client/consumer/static/: index.html  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
client/consumer/static/assets/css/: styles.min.css
client/director_auth/: Cargo.toml
client/director_auth/deploy/: index.html  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm
client/director_auth/src/: json.rs  lib.rs  structs.rs
client/director_auth/static/: index.html  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
client/director_auth/static/assets/css/: styles.min.css
client/director_auth/static/snippets/director_auth-0bb5119e710bf35e/: inline2.js  inline3.js
client/login/: Cargo.toml
client/login/deploy/: wasm_bg.wasm
client/login/src/: lib.rs
client/login/static/: index.html  package.json  styles.css  wasm.d.ts  wasm.js  wasm_bg.wasm
client/login/static/snippets/root-dda50a81c1bdf819/: inline0.js
server/: Cargo.toml
server/src/: app.rs  application.rs  cookies.rs  end_deploy.sh  game_folder.rs  handle_to_app.rs  html_handlers.rs  main.rs  participants.rs  prep_deploy.sh  ws_handler.rs
server/src/application/: app.rs  app_messages.rs  app_to_game.rs  game.rs  game_folder.rs  handle_to_app.rs  participants.rs  player.rs
server/src/application/game_folder/: game.rs  game_to_app.rs  game_to_consumer.rs  game_to_director.rs  game_to_participant.rs  game_to_producer.rs  game_to_viewer.rs  participants.rs
server/src/application/game_folder/participants/: director_folder.rs  json.rs  participant_to_game.rs  producer_folder.rs  viewer_folder.rs
server/src/application/participants/: consumer.rs  director.rs  json.rs  player.rs  producer.rs  viewer.rs  ws_to_app.rs  ws_to_game.rs
server/src/game_folder/: game.rs  game_to_app.rs  game_to_consumer.rs  game_to_director.rs  game_to_participant.rs  game_to_producer.rs  game_to_viewer.rs
server/src/participants/: consumer_folder.rs  heartbeat.rs  participant_to_game.rs
server/src/participants/consumer_folder/: consumer.rs  consumer_structs.rs  consumer_to_game.rs
server/src/participants/director_folder/: director.rs  director_structs.rs  director_to_game.rs
server/src/participants/producer_folder/: producer.rs  producer_structs.rs  producer_to_game.rs
server/src/participants/viewer_folder/: viewer.rs  viewer_structs.rs  viewer_to_game.rs
(+75 files in other folders)
