[package]
name = "actix_learn"
version = "0.1.0"
authors = ["tweoss <hwymonkey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-web-actors = "3.0.0"
actix = "0.10.0"
actix-files = "0.3"
env_logger = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = "0.2"
