[package]
name = "root"
version = "0.1.0"
authors = ["tweoss <hwymonkey@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
failure = "0.1.8"
anyhow = "1.0.37"
http = "0.2.3"
reqwest = "0.11.0"