[package]
name = "director_auth"
version = "0.1.0"
authors = ["tweoss <hwymonkey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.70"
failure = "0.1.8"
anyhow = "1.0.37"
http = "0.2.3"
reqwest = "0.11.0"
serde_json = "1.0.59"
web-sys = { version = "0.3.45", features = ["RequestCredentials"] }
stdweb = "0.4.20"
serde_cbor = "0.11.1"
serde = "1.0.123"