[package]
name = "main_login"
version = "0.1.0"
authors = ["tweoss <hwymonkey@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
failure = "0.1.8"
anyhow = "1.0.37"
http = "0.2.3"
reqwest = "0.11.0"
serde_json = "1.0.59"
web-sys = { version = "0.3.45", features = ["RequestCredentials"] }
stdweb = "0.4.20"
console_error_panic_hook = "0.1.6"
